<resources>
    <string name="app_name">NeRecipe</string>
    <string name="hello_kotlin">Hello Kotlin!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="options">options</string>
    <string name="like">like</string>
    <string name="share">share</string>
    <string name="visible">visible</string>
    <string name="remove">Remove</string>
    <string name="post_text">post_text</string>
    <string name="description">description</string>
    <string name="edit">Edit</string>
    <string name="pencilImage">pencilImage</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">add post</string>
    <string name="video">Video</string>
    <string name="URL">URL</string>
    <string name="post_text_content">Post Text Content</string>
    <string name="video_open">open video</string>
    <string name="title_hint" translatable="false">title</string>
    <string name="author_name_hint" translatable="false">authorName</string>
    <string name="category_recipe_hint" translatable="false">category</string>
    <string name="text_hint" translatable="false">text</string>
    <string name="menu_options_description" translatable="false">options</string>
    <string name="button_favorite_description" translatable="false">addToFavourite</string>
    <string name="icon_background_description" translatable="false">iconBackground</string>
    <string name="text_background" translatable="false">text_background</string>
    <string name="all_recipes" translatable="false">all_recipes</string>
    <string name="favorites" translatable="false">favourites</string>
    <string name="filter" translatable="false">filter</string>
    <string name="text_recipe_hint" translatable="false">text_recipe</string>
    <string name="european_type" translatable="false">european</string>
    <string name="asian_type" translatable="false">asian_type</string>
    <string name="panasian_type" translatable="false">panasian_type</string>
    <string name="eastern_type" translatable="false">eastern_type</string>
    <string name="american_type" translatable="false">american_type</string>
    <string name="russian_type" translatable="false">russian_type</string>
    <string name="mediterranean_type" translatable="false">mediterranean_type</string>
    <string name="button_save_description" translatable="false">button_save_description</string>
    <string name="button_apply_text" translatable="false">button_apply_text</string>
    <string name="search" translatable="false">search</string>
    <string name="button_add_description" translatable="false">button_add_description</string>
    <string name="button_clear_filter" translatable="false">button_clear_filter</string>
</resources>