<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.gtsystems.nerecipe.ui.RecipeCreateFragment"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:backgroundTint="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/title_hint"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        tools:layout_editor_absoluteX="8dp"
        android:inputType="text" />


    <EditText
        android:id="@+id/authorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/author_name_hint"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="8dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/textRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/text_recipe_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        tools:layout_editor_absoluteX="8dp" />

    <RadioGroup
        android:id="@+id/categoryRecipeCheckBox"
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRecipe">

        <RadioButton
            android:id="@+id/checkBoxEuropean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/european_type" />

        <RadioButton
            android:id="@+id/checkBoxAsian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asian_type" />

        <RadioButton
            android:id="@+id/checkBoxPanasian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panasian_type" />

        <RadioButton
            android:id="@+id/checkBoxEastern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eastern_type" />

        <RadioButton
            android:id="@+id/checkBoxAmerican"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/american_type" />

        <RadioButton
            android:id="@+id/checkBoxRussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian_type" />

        <RadioButton
            android:id="@+id/checkBoxMediterranean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediterranean_type" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSave"
        android:backgroundTint="@color/teal_200"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_save_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.constraintlayout.widget.ConstraintLayout>