<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.NewPostFragment">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:layout_gravity="top"
        android:inputType="textMultiLine"
        android:text="@string/post_text_content"
        android:layout_marginTop="100dp"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:inputType="textMultiLine"
        android:text="@string/URL"
        android:layout_marginTop="300dp"


        />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_save"
        android:src="@drawable/ic_baseline_done_outline_24dp"
        app:layout_anchor="@id/bottomAppBar"
        />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>